--- a/AngularCRUDDemo/src/app/user.component.html
+++ b/AngularCRUDDemo/src/app/user.component.html
@@ -1,8 +1,3 @@
 <div class="container">
-    <div>
-        <Button class="btn btn-primary float-end me-5 mb-4" (click)="AdduserForm()">Add</Button>
-    </div>
-    <div>
-        <router-outlet></router-outlet>
-    </div>
+        <app-user-list></app-user-list>
 </div>
