--- a/AngularCRUDDemo/src/app/user/user-list/user-list.component.html
+++ b/AngularCRUDDemo/src/app/user/user-list/user-list.component.html
@@ -1,19 +1,24 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Gender</th>
-            <th>Birthdate</th>
-            <th>Department</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="text-center">
-            <td colspan="6">
-                No record Found
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div>
+    <Button class="btn btn-primary float-end me-5 mb-4" routerLink="/user/user-form">Add</Button>
+</div>
+<div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Gender</th>
+                <th>Birthdate</th>
+                <th>Department</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="text-center">
+                <td colspan="6">
+                    No record Found
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
